--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,14 @@ img{ border: none;}
 header#hd{padding: 15px 0;}
 #hd a, #hd img{ display: block;}
 /* 꺽세 필요 없음. 여기서는 모든 a, img에 주기 위해서. 꺽세의 의미: 무조건 자식  띄어쓰기: 후손선택자*/
-#gnb > li > a {font-weight: bold; font-size: 18px; line-height: 46px; margin-left:  2em;}
+#gnb > li > a {font-weight: bold; font-size: 18px; line-height: 46px; margin-left:  2em; display: block;}
 /* li.fl a{font-size: 20px; line-height: 46px ; font-style: bold;} 공통클래스는 언제든 제외될 수 있으므로 위에 방법처럼 사용 */
 /* #gnb > ul > li > a {font-size: 0.8em; line-height: 0.9em;} 이것도 맞음. */
 #gnb .d2{ background-color: darkblue;
           left: 15px; top:calc(100% + 15px) ; /*띄어쓰기..주의...*/
           padding: 10px 15px;
           width: 100px;
+          display: none;
           }
 #gnb .d2 a{ font-size: 0.9em; line-height: 1.5; color: white; }
 
