--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,11 @@ header#hd{padding: 15px 0;}
 /* #gnb > ul > li > a {font-size: 0.8em; line-height: 0.9em;} 이것도 맞음. */
 #gnb .d2{ background-color: darkblue;
           left: 15px; top: calc( 100% + 15px ) ; /*띄어쓰기..주의...*/
-          padding: 10px 15px;
+          padding: 0 15px;
           width: 100px;
-          display: none;
+          height: 0;
+          transition:0.4s;
+          overflow: hidden;
           }
 #gnb .d2 a{ font-size: 0.9em; line-height: 1.5; color: white; }
 
@@ -54,6 +56,9 @@ header#hd{padding: 15px 0;}
 /* #gnb li:nth-child(2) .d2{width: 105px;} */
 #gnb li:nth-child(4) .d2{width: 68px;}
 
-#gnb > li:hover .d2 { display: block;}
+#gnb > li:hover .d2 { display: block; height: 120px;}
+
+
+
 section#main{}
 footer#fd{}
